<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageButton
        android:id="@id/exo_prev"
        style="@style/ExoMediaButton.Previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/exoplayer_playback_control_view_previous_button"
        android:paddingEnd="@dimen/padding_2dp"
        android:paddingStart="@dimen/padding_16dp"
        android:paddingTop="@dimen/padding_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@id/exo_play"
        style="@style/ExoMediaButton.Play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:contentDescription="@string/exoplayer_playback_control_view_play_button"
        android:paddingTop="@dimen/padding_8dp"
        app:layout_constraintEnd_toStartOf="@+id/exo_pause"
        app:layout_constraintStart_toEndOf="@+id/exo_prev"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@id/exo_pause"
        style="@style/ExoMediaButton.Pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:contentDescription="@string/exoplayer_playback_control_view_pause_button"
        android:paddingTop="@dimen/padding_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exo_play"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/exo_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_4dp"
        android:paddingEnd="@dimen/padding_4dp"
        android:paddingStart="@dimen/padding_16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        app:layout_constraintEnd_toStartOf="@+id/exo_progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exo_prev"/>

    <com.google.android.exoplayer2.ui.DefaultTimeBar
        android:id="@+id/exo_progress"
        android:layout_width="0dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/exo_position"
        app:layout_constraintEnd_toStartOf="@+id/exo_duration"
        app:layout_constraintStart_toEndOf="@+id/exo_position"
        app:layout_constraintTop_toTopOf="@+id/exo_position"/>

    <TextView
        android:id="@+id/exo_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_4dp"
        android:paddingEnd="@dimen/padding_16dp"
        android:paddingStart="@dimen/padding_4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        app:layout_constraintBottom_toBottomOf="@+id/exo_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exo_progress"
        app:layout_constraintTop_toTopOf="@+id/exo_progress"/>

</android.support.constraint.ConstraintLayout>
